Add actual Steam site for comparison

--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
              </div> 
         </footer>
     </div>
+    <div class="actual-steam-site">
+        <h2>Actual Steam mobile view</h2>
+        <img src="/images/actualSteamSite.png" alt="actual steam site">
+    </div>
 </body>
 </html>
 
