Add bg images to tab-btns

--- a/index.html
+++ b/index.html
@@ -113,19 +113,23 @@
         </form>
         <section class="tag-btns">
             <div class="tag-btn">
-                <img class="tag-img" src="/icons/New.svg" alt="">
+                <img class="tab-btn-icon" src="/icons/New.svg" alt="">
+                <img class="tab-btn-img" src="/images/Crusader.PNG" alt="">
                 <p>NEW</p>
             </div>
             <div class="tag-btn">
-                <img src="/icons/Tags.svg" alt="">
+                <img class="tab-btn-icon" src="/icons/Tags.svg" alt="">
+                <img class="tab-btn-img" src="/images/Darkest Dungeon.PNG" alt="">
                 <p>TAGS</p>
             </div>
             <div class="tag-btn">
-                <img src="/icons/Special.svg" alt="">
+                <img class="tab-btn-icon" src="/icons/Special.svg" alt="">
+                <img class="tab-btn-img" src="/images/PUBG.PNG" alt="">
                 <p>SPECIAL</p>
             </div>
             <div class="tag-btn">
-                <img src="/icons/Free.svg" alt="">
+                <img class="tab-btn-icon" src="/icons/Free.svg" alt="">
+                <img class="tab-btn-img" src="/images/Stellaris.PNG" alt="">
                 <p>FREE</p>
             </div>
         </section>
