--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
         <section class="featured-games">
             <section class="carousel" aria-label="Gallery">
                 <ol class="carousel__viewport">
+
                   <li id="carousel__slide1"
                       tabindex="0"
                       class="carousel__slide">
                     <div class="carousel__snapper">
                         <img id="carousel__slide1" src="/images/PUBG.PNG" alt="">
-                      <a href="#carousel__slide4"
+                      <a href="#carousel__slide3"
                          class="carousel__prev"></a>
                       <a href="#carousel__slide2"
                          class="carousel__next">
@@ -66,24 +67,13 @@
                       tabindex="0"
                       class="carousel__slide">
                     <div class="carousel__snapper">
-                        <img id="carousel__slide1" src="/images/PUBG.PNG" alt="">
+                        <img id="carousel__slide1" src="/images/Darkest Dungeon.PNG" alt="">
                         <a href="#carousel__slide2"
-                        class="carousel__prev"></a>
-                        <a href="#carousel__slide4"
-                        class="carousel__next"></a>
-                    </div>
-                  </li>
-                  <li id="carousel__slide4"
-                      tabindex="0"
-                      class="carousel__slide">
-                    <div class="carousel__snapper">
-                        <img id="carousel__slide1" src="/images/FarCry6.PNG" alt="">
-                        <a href="#carousel__slide3"
                         class="carousel__prev"></a>
                         <a href="#carousel__slide1"
                         class="carousel__next"></a>
                     </div>
-                    </li>
+                  </li>
                 </ol>
                 <aside class="carousel__navigation">
                   <ol class="carousel__navigation-list">
@@ -99,10 +89,10 @@
                       <a href="#carousel__slide3"
                          class="carousel__navigation-button"></a>
                     </li>
-                    <li class="carousel__navigation-item">
+                    <!-- <li class="carousel__navigation-item">
                       <a href="#carousel__slide4"
                          class="carousel__navigation-button"></a>
-                    </li>
+                    </li> -->
                   </ol>
                 </aside>
               </section>
