--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="header__container">
                 <div class="header__logo">
                     <img class="logo__image" src="/icons/steam 1.svg" alt="steam logo">
-                    <p class="logo__text">STEAM</p>
+                    <a href="#" class="logo__text">STEAM</>
                 </div>
                 <div class="header__menu">
                     <img class="header__menu__image" id="menu-btn" src="/icons/Steam_menu.svg" />
