Add scroll indicator and clean up scss

--- a/index.html
+++ b/index.html
@@ -30,15 +30,13 @@
                 </ul>
                 <div class="legal">
                     <p><img src="/icons/Valve_logo.svg" alt="valve"></p>
-                    <p>© Valve Corporation. Kaikki oikeudet pidätetään. Kaikki tavaramerkit ovat omistajiensa omaisuutta Yhdysvalloissa ja kaikkialla maailmassa</p>
+                    <p>©Valve Corporation. Kaikki oikeudet pidätetään. Kaikki tavaramerkit ovat omistajiensa omaisuutta Yhdysvalloissa ja kaikkialla maailmassa</p>
                 </di>
-               <!-- <div class="close-btn" id="close-btn"></div> -->
             </nav>
         </header>
-        <section class="featured-games">
+        <section class="featured-games scroll">
             <section class="carousel" aria-label="Gallery">
                 <ol class="carousel__viewport">
-
                   <li id="carousel__slide1"
                       tabindex="0"
                       class="carousel__slide">
@@ -89,10 +87,6 @@
                       <a href="#carousel__slide3"
                          class="carousel__navigation-button"></a>
                     </li>
-                    <!-- <li class="carousel__navigation-item">
-                      <a href="#carousel__slide4"
-                         class="carousel__navigation-button"></a>
-                    </li> -->
                   </ol>
                 </aside>
               </section>
