--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="game-list__tabs__item"><p class="tab" id="tab-2">Top</p></div>
                     <div class="game-list__tabs__item"><p class="tab" id="tab-3">Upcoming</p></div>
                     <div class="game-list__tabs__item"><p class="tab" id="tab-4">Trending</p></div>
-                    <div class="game-list__tabs__item"><div><img src="/icons/Arrow.svg" alt=""></div></s>
+                    <div class="game-list__tabs__item"><div class="more-arrow"><img src="/icons/Arrow.svg" alt=""></div></s>
                 </div>
             </div>
             <div class="game-list-container">
