fix footer company info and minor scss improvements

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
             <div class="game-list-container">
                 <div class="game-list-container__games" id="game-list-container__games"></div>
-                <a href="" class="game-list__see-more">See all</>
+                <a href="" class="game-list__see-more">See all</a>
             </div>
         </section>
         <section class="queue">
