fix aria-labels in links

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             </div>
             <nav id="nav">
                 <ul aria-hidden="true" id="menu-ul" aria-label="Main Menu">
-                    <li><a class="nav__link" aria-label="Sign" href="#">Sign In</a></li>
-                    <li><a class="nav__link" aria-label="Store" href="#">Store</a></li>
-                    <li><a class="nav__link" aria-label="Community" href="#">Community</a></li>
-                    <li><a class="nav__link" aria-label="Support" href="#">Support</a></li>
-                    <li><a class="nav__link" aria-label="Settings" href="#">Settings</a></li>
+                    <li><a class="nav__link" href="#">Sign In</a></li>
+                    <li><a class="nav__link" href="#">Store</a></li>
+                    <li><a class="nav__link" href="#">Community</a></li>
+                    <li><a class="nav__link" href="#">Support</a></li>
+                    <li><a class="nav__link" href="#">Settings</a></li>
                 </ul>
                 <div class="legal">
                     <p><img src="/icons/Valve_logo.svg" alt="valve"></p>
@@ -141,7 +141,7 @@
             </div>
             <div class="game-list-container">
                 <div class="game-list-container__games" id="game-list-container__games" aria-label="Games"></div>
-                <a href="#" class="game-list__see-more" aria-label="See all">See all</a>
+                <a href="#" class="game-list__see-more">See all</a>
             </div>
         </section>
         <section class="queue" aria-label="Your discovery queue">
