--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </section>
         </section>
         <form class="search-bar" id="site-search" role="search" aria-label="Site wide">
-            <input type="text" class="search-bar__input" placeholder="Search" name="search">
+            <input type="text" class="search-bar__input" id="search-bar__input" placeholder="Search" name="search">
             <button class="search-bar__button" value="Submit" type="submit" aria-label="Search">
                 <img class="search-bar__button__icon" src="/icons/Search_icon.svg" alt="Search">
             </button>
