Improve keyboard navigation

--- a/index.html
+++ b/index.html
@@ -81,22 +81,6 @@
                         </div>
                     </li>
                 </ol>
-                <aside class="carousel__navigation">
-                    <ol class="carousel__navigation-list">
-                        <li class="carousel__navigation-item">
-                            <a href="#carousel__slide1"
-                               class="carousel__navigation-button" aria-label="Go to Slide 1"></a>
-                        </li>
-                        <li class="carousel__navigation-item">
-                            <a href="#carousel__slide2"
-                               class="carousel__navigation-button" aria-label="Go to Slide 2"></a>
-                        </li>
-                        <li class="carousel__navigation-item">
-                            <a href="#carousel__slide3"
-                               class="carousel__navigation-button" aria-label="Go to Slide 3"></a>
-                        </li>
-                    </ol>
-                </aside>
             </section>
         </section>
         <form class="search-bar" id="site-search" role="search" aria-label="Site wide">
@@ -106,22 +90,22 @@
             </button>
         </form>
         <section class="tag-btns" aria-label="Find games from different categories">
-            <div class="tag-btn" aria-label="New Games">
+            <div class="tag-btn" aria-label="New Games" tabindex="0">
                 <img class="tab-btn-icon" src="/icons/New.svg" alt="New icon" aria-hidden="true">
-                <img class="tab-btn-img" src="/images/Crusader.webp" alt="Crusader" aria-hidden="true">
+                <img class="tab-btn-img" src="/images/Crusader.webp" alt="Crusader"  aria-hidden="true">
                 <p aria-hidden="true">NEW</p>
             </div>
-            <div class="tag-btn" aria-label="Tags">
+            <div class="tag-btn" aria-label="Tags" tabindex="0">
                 <img class="tab-btn-icon" src="/icons/Tags.svg" alt="Tags icon" aria-hidden="true">
                 <img class="tab-btn-img" src="/images/Darkest Dungeon.webp" alt="Darkest Dungeon" aria-hidden="true">
                 <p aria-hidden="true">TAGS</p>
             </div>
-            <div class="tag-btn" aria-label="Special Games">
+            <div class="tag-btn" aria-label="Special Games" tabindex="0" >
                 <img class="tab-btn-icon" src="/icons/Special.svg" alt="Special icon" aria-hidden="true">
                 <img class="tab-btn-img" src="/images/PUBG.webp" alt="PUBG" aria-hidden="true">
                 <p aria-hidden="true">SPECIAL</p>
             </div>
-            <div class="tag-btn" aria-label="Free Games">
+            <div class="tag-btn" aria-label="Free Games" tabindex="0">
                 <img class="tab-btn-icon" src="/icons/Free.svg" alt="Free icon" aria-hidden="true">
                 <img class="tab-btn-img" src="/images/Stellaris.webp" alt="Stellaris" aria-hidden="true">
                 <p aria-hidden="true">FREE</p>
