Fix keyboard navigation

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li><a class="nav__link" href="#" tabindex="0">Settings</a></li>
             <li>
               <a
-                class="nav__link"
+                class="nav__link close-nav"
                 href="#"
                 tabindex="0"
                 aria-label="close navigation"
