Make the project responsive and add scroll for the game list tabs

--- a/index.html
+++ b/index.html
@@ -276,8 +276,23 @@
             >
               <p class="tab" id="tab-4">Trending</p>
             </div>
-            <div class="more-arrow" aria-hidden="true">
-              <img src="/icons/Arrow.svg" alt="Reveal more tabs" />
+            <div
+              class="game-list__tabs__item"
+              aria-label="Trending"
+              role="tab"
+              tabindex="0"
+              data-tab="tab-4"
+            >
+              <p class="tab" id="tab-4">Lorem</p>
+            </div>
+            <div
+              class="game-list__tabs__item"
+              aria-label="Trending"
+              role="tab"
+              tabindex="0"
+              data-tab="tab-4"
+            >
+              <p class="tab" id="tab-4">Ipsum</p>
             </div>
           </div>
         </div>
@@ -291,6 +306,12 @@
             <!-- Games data gets added here from JS -->
           </div>
           <a href="#" class="game-list__see-more">See all</a>
+        </div>
+        <div class="next-arrow arrow" aria-hidden="true">
+          <img src="/icons/Arrow.svg" alt="Reveal more tabs" />
+        </div>
+        <div class="previous-arrow arrow" aria-hidden="true">
+          <img src="/icons/Arrow.svg" alt="Reveal more tabs" />
         </div>
       </section>
 
