add tabs and comments

--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
       <section class="game-list" aria-label="A list of games under tabs">
         <div class="game-list__tabs-container">
           <div class="game-list__tabs" aria-label="Tabs" role="tablist">
+            <!--List item -->
             <div
               class="game-list__tabs__item"
               aria-label="New"
@@ -249,6 +250,7 @@
             >
               <p class="selected tab" id="tab-1">New</p>
             </div>
+            <!--List item -->
             <div
               class="game-list__tabs__item"
               aria-label="Top"
@@ -258,6 +260,7 @@
             >
               <p class="tab" id="tab-2">Top</p>
             </div>
+            <!--List item -->
             <div
               class="game-list__tabs__item"
               aria-label="Upcoming"
@@ -267,6 +270,7 @@
             >
               <p class="tab" id="tab-3">Upcoming</p>
             </div>
+            <!--List item -->
             <div
               class="game-list__tabs__item"
               aria-label="Trending"
@@ -276,23 +280,35 @@
             >
               <p class="tab" id="tab-4">Trending</p>
             </div>
+            <!--List item -->
             <div
               class="game-list__tabs__item"
-              aria-label="Trending"
+              aria-label="Favorites"
               role="tab"
               tabindex="0"
               data-tab="tab-4"
             >
-              <p class="tab" id="tab-4">Lorem</p>
+              <p class="tab" id="tab-4">Favorites</p>
             </div>
+            <!--List item -->
             <div
               class="game-list__tabs__item"
-              aria-label="Trending"
+              aria-label="Sales"
               role="tab"
               tabindex="0"
               data-tab="tab-4"
             >
-              <p class="tab" id="tab-4">Ipsum</p>
+              <p class="tab" id="tab-4">Sales</p>
+            </div>
+            <!--List item -->
+            <div
+              class="game-list__tabs__item"
+              aria-label="Picks"
+              role="tab"
+              tabindex="0"
+              data-tab="tab-4"
+            >
+              <p class="tab" id="tab-4">Picks</p>
             </div>
           </div>
         </div>
